tests/snapshots/ir_tests__binding_example.snap
---
source: tests/ir_tests.rs
expression: json
---
{
  "strength": "Example",
  "value_set": "http://example.org/ValueSet/test",
  "description": "Test binding"
}
