tests/snapshots/ir_tests__binding_extensible.snap
---
source: tests/ir_tests.rs
expression: json
---
{
  "strength": "Extensible",
  "value_set": "http://example.org/ValueSet/test",
  "description": "Test binding"
}
