tests/snapshots/ir_tests__binding_preferred.snap
---
source: tests/ir_tests.rs
expression: json
---
{
  "strength": "Preferred",
  "value_set": "http://example.org/ValueSet/test",
  "description": "Test binding"
}
