tests/snapshots/ir_tests__binding_required.snap
---
source: tests/ir_tests.rs
expression: json
---
{
  "strength": "Required",
  "value_set": "http://example.org/ValueSet/test",
  "description": "Test binding"
}
