tests/snapshots/ir_tests__choice_type.snap
---
source: tests/ir_tests.rs
expression: json
---
{
  "kind": "Choice",
  "types": [
    "string",
    "CodeableConcept"
  ]
}
