tests/snapshots/ir_tests__reference_type.snap
---
source: tests/ir_tests.rs
expression: json
---
{
  "kind": "Reference",
  "target_types": [
    "Patient",
    "Practitioner"
  ]
}
