tests/snapshots/ir_tests__serialize_invariant_rule.snap
---
source: tests/ir_tests.rs
expression: json
---
{
  "key": "pat-1",
  "severity": "Error",
  "human": "SHALL at least contain a contact's details or a reference to an organization",
  "expression": "name.exists() or telecom.exists() or address.exists() or organization.exists()",
  "xpath": "f:name or f:telecom or f:address or f:organization"
}
